tests/ui/const-generics/mgca/explicit_anon_consts-5.stderr
error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts-5.rs:14:30
   |
LL |     T: Trait<ASSOC = const { N }>,
   |                              ^

error: aborting due to 1 previous error

